kubernetes/base/media-server/bases/emby/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  labels:
    project: media-server
    component: emby
spec:
  replicas: 1
  selector:
    matchLabels:
      project: media-server
      component: emby
  template:
    metadata:
      labels:
        project: media-server
        component: emby
    spec:
      containers:
        - name: emby
          image: emby/embyserver:4.8.0.39
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - mountPath: /config
              name: emby-config
            - mountPath: /media
              name: media
      volumes:
        - name: emby-config
          persistentVolumeClaim:
            claimName: emby-config
        - name: media
          persistentVolumeClaim:
            claimName: media-files
