kubernetes/base/media-server/bases/emby/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby
  labels:
    project: media-server
    component: emby
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: emby.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby
            port:
              number: 80
  tls:
  - hosts:
    - emby.k8s.funkyboy.zone
    secretName: emby-ingress-cert
